fixes last of type accordion item border in dark mode

--- a/source/_patterns/02-molecules/accordion/_accordion.scss
+++ b/source/_patterns/02-molecules/accordion/_accordion.scss
@@ -76,6 +76,10 @@ $accordion-border: $dark-blue solid $border-width--thicker;
   .accordion-set {
     .item {
       border-color: $light-blue;
+
+      &:last-of-type {
+        border-bottom-color: $light-blue;
+      }
       
       .title, 
       .field__title {
